--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -10,6 +10,10 @@
 :scheduler:
   :listened_queues_only: true
 :schedule:
+  remote_feed_scheduler:
+    every: '10m'
+    class: FetchRemoteLocalFeedWorker
+    queue: scheduler
   scheduled_statuses_scheduler:
     every: '5m'
     class: Scheduler::ScheduledStatusesScheduler
